Issue titles under epics should not be 100% wide
i.e. Remove the negative margin, to stop the title overflowing.

--- a/client/src/styles/_issue.scss
+++ b/client/src/styles/_issue.scss
@@ -8,6 +8,10 @@
   margin-bottom: 5px;
 }
 
+epic .issue-title {
+  margin: 0;
+}
+
 .issue-title {
   padding: 0 1rem;
   box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.75);
